erDiagram
    USERS ||--o{ ORDERS : places
    USERS {
        int user_id PK
        string email_id
        string full_name
        string phone
        string address
    }

    PRODUCTS ||--o{ ORDER_ITEMS : contains
    PRODUCTS {
        int product_id PK
        string name
        text description
        decimal price
        int category_id FK
        decimal weight
        int dimensions
        string material
        text image_url
        string supplier_name
        string supplier_email
        string supplier_phone
    }
   CATEGORIES ||--o{ PRODUCTS : categorizes
    CATEGORIES {
        int category_id PK
        string name
        string description
    }

    ORDERS ||--o{ ORDER_ITEMS : includes
    ORDERS ||--|| PAYMENT : has
    ORDERS {
        int order_id PK
        int user_id FK
        decimal total_amount
        string status
        datetime order_date
        date delivery_date
    }

    PAYMENT {
        int payment_id PK
        int order_id FK
        int user_id FK
        decimal amount
        string payment_method
        datetime payment_date
        string status
        string error_message
    }

    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int quantity
        decimal unit_price
        decimal assembly_cost
    }
